# cpp-m2-rest-api

./: CMakeLists.txt  README.md  config.example.json  main.cpp
.github/workflows/: build.yml  flawfinder-analysis.yml
api/: IntegrationadmintokenApi.cpp  IntegrationadmintokenApi.h
debug/: Dockerfile  docker-compose.yaml
impl/: IntegrationadmintokenApiImpl.cpp  IntegrationadmintokenApiImpl.h
model/: Error-errors-item.cpp  Error-errors-item.h  Error-errors.cpp  Error-errors.h  Error-parameters-item.cpp  Error-parameters-item.h  Error-parameters.cpp  Error-parameters.h  Error-response.cpp  Error-response.h  ModelBase.cpp  ModelBase.h  V1IntegrationAdminTokenPostBody.cpp  V1IntegrationAdminTokenPostBody.h  V1StoreView.h  encryptor.h
model/store/: V1StoreGroup.cpp  V1StoreGroup.h  V1StoreView.cpp  V1StoreView.h
scripts/: mysql-prepare.sh  ubuntu-install-dev.sh  ubuntu-service-run.sh  ubuntu-service-status.sh
src/: app.h  handers.h  references.hpp
src/hander/admin/: modules.h
src/hander/cart/guest/: totals-information.h
src/hander/generic/: ready.h  rest.h
src/hander/integration/admin/: token.h
src/util/: php_serializer.h  zlib.h
tests/: Rest_test.js  cart_totals_test.js  codecept.conf.js  integration_admin_test.js  package-lock.json  package.json
